--- a/ios-browser-ui-viewport-bug/src/styles.scss
+++ b/ios-browser-ui-viewport-bug/src/styles.scss
@@ -3,30 +3,39 @@
 /* Global Styles and SCSS Mixins */
 
 /* Mixin for full viewport height */
-@mixin full-viewport {
+// @mixin full-viewport {
+//   height: 100vh;
+// }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+html,
+body {
   height: 100vh;
 }
-
 /* Variable for viewport height adjustment */
-$vh-adjustment: calc(var(--vh, 1vh) * 100);
+// $vh-adjustment: calc(var(--vh, 1vh) * 100);
 
 /* Apply mixin to the full-viewport class */
-.full-viewport {
-  @include full-viewport;
-  height: $vh-adjustment;
+// .full-viewport {
+//   @include full-viewport;
+//   height: $vh-adjustment;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #f5f5f5;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   justify-content: center;
+//   background-color: #f5f5f5;
 
-  h1 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-  }
+//   h1 {
+//     font-size: 2rem;
+//     margin-bottom: 1rem;
+//   }
 
-  p {
-    font-size: 1.2rem;
-  }
-}
+//   p {
+//     font-size: 1.2rem;
+//   }
+// }
