--- a/ios-browser-ui-viewport-bug/src/app/home/home.component.scss
+++ b/ios-browser-ui-viewport-bug/src/app/home/home.component.scss
@@ -16,3 +16,12 @@ button {
   font-size: 1rem;
   cursor: pointer;
 }
+
+.lorem-ipsum-container {
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 1rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow-y: auto;
+}
