--- a/ios-browser-ui-viewport-bug/src/styles.scss
+++ b/ios-browser-ui-viewport-bug/src/styles.scss
@@ -14,7 +14,9 @@
 }
 html,
 body {
-  height: 100vh;
+  height: 100%;
+  overflow: hidden;
+
 }
 /* Variable for viewport height adjustment */
 // $vh-adjustment: calc(var(--vh, 1vh) * 100);
