--- a/ios-browser-ui-viewport-bug/src/app/page2/page2.component.html
+++ b/ios-browser-ui-viewport-bug/src/app/page2/page2.component.html
@@ -1,4 +1,18 @@
 <div class="full-viewport page2">
   <h1>Page 2</h1>
-  <p>Yet another page with 100vh styling for testing.</p>
+  <p>Another page utilizing 100vh to test viewport behavior.</p>
+  <p>Caso de error Scroll Behaviour</p>
+  <p>Scrollable content max-height</p>
+
+  <input type="number" [(ngModel)]="itemCount" min="1" max="100">
+
+  <div class="scrollable-container">
+    <ul>
+      <li *ngFor="let item of getItems()">Item {{ item }}</li>
+    </ul>
+  </div>
+  <div class="button-container">
+    <button class="button" (click)="decrementCount()">-</button>
+    <button class="button" (click)="incrementCount()">+</button>
+  </div>
 </div>
