--- a/ios-browser-ui-viewport-bug/src/styles.scss
+++ b/ios-browser-ui-viewport-bug/src/styles.scss
@@ -16,7 +16,20 @@ html,
 body {
   height: 100%;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #f5f5f5;
 
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  p {
+    font-size: 1.2rem;
+  }
 }
 /* Variable for viewport height adjustment */
 // $vh-adjustment: calc(var(--vh, 1vh) * 100);
