--- a/ios-browser-ui-viewport-bug/src/app/page2/page2.component.html
+++ b/ios-browser-ui-viewport-bug/src/app/page2/page2.component.html
@@ -1,5 +1,19 @@
 <div class="full-viewport page2">
   <h1>Page 2</h1>
+  <div class="height-info">
+    <div class="height-box">
+      <label>Inner Height:</label>
+      <input type="text" [value]="innerHeight + 'px'" readonly>
+    </div>
+    <div class="height-box">
+      <label>Outer Height:</label>
+      <input type="text" [value]="outerHeight + 'px'" readonly>
+    </div>
+    <div class="height-box">
+      <label>Client Height:</label>
+      <input type="text" [value]="clientHeight + 'px'" readonly>
+    </div>
+  </div>
   <p>Another page utilizing 100vh to test viewport behavior.</p>
   <p>Caso de error Scroll Behaviour</p>
   <p>Scrollable content max-height</p>
