--- a/ios-browser-ui-viewport-bug/src/app/home/home.component.scss
+++ b/ios-browser-ui-viewport-bug/src/app/home/home.component.scss
@@ -25,4 +25,11 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     overflow-y: auto;
   }
-  
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  p {
+    font-size: 1.2rem;
+  }
