--- a/ios-browser-ui-viewport-bug/src/app/page1/page1.component.scss
+++ b/ios-browser-ui-viewport-bug/src/app/page1/page1.component.scss
@@ -36,3 +36,11 @@
     cursor: pointer;
     width: 100%;
 }
+h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  p {
+    font-size: 1.2rem;
+  }
